fix (docs): add missing links to Contribution docs

--- a/packages/design-docs/stories/DesignSystem/GetStartedContribution/Bugs/Bugs.mdx
+++ b/packages/design-docs/stories/DesignSystem/GetStartedContribution/Bugs/Bugs.mdx
@@ -42,7 +42,7 @@ import Body from "../../../../src/components/Body/Body";
 
                 Créez un ticket en utilisant le **template “Anomalie Design”, **décrivez l’écart observé, ajoutez des captures ou un lien vers la page concernée, puis expliquez le comportement ou la règle attendue si vous la connaissez.
 
-                🔗 <strong><u>Template → Anomalie Design</u></strong>
+                🔗 <strong><a href="https://gopro-tickets.rte-france.com/browse/DSR-458" target="_blank" class="docs-link">Template → Anomalie Design</a></strong>
 
                 L’équipe Design System analyse ensuite le ticket, confirme l’anomalie et la corrige dans les fichiers ou la documentation concernés.
             </DocsSection>
@@ -74,8 +74,8 @@ import Body from "../../../../src/components/Body/Body";
                 
                 Créez un ticket avec le **template “Anomalie Dev”, **décrivez précisément le bug, les étapes pour le reproduire, la version de la librairie utilisée, et fournissez des captures, GIF ou liens Storybook si possible.
 
-                🔗 <strong><u>Template → Anomalie Dev</u></strong>
-                
+                🔗 <strong><a href="https://gopro-tickets.rte-france.com/browse/DSR-459" target="_blank" class="docs-link">Template → Anomalie Dev</a></strong>
+
                 L’équipe Design System vérifie la conformité avec la spec, puis corrige l’implémentation et publie la mise à jour dans la librairie.
             </DocsSection>
         </Accordion>
