--- a/packages/design-docs/stories/DesignSystem/GetStartedContribution/Evolutions/Evolutions.mdx
+++ b/packages/design-docs/stories/DesignSystem/GetStartedContribution/Evolutions/Evolutions.mdx
@@ -50,11 +50,11 @@ import DecisionTree from "./assets/DecisionTree.svg";
                 <DocsSection title="Utiliser les templates Jira">
                     Pour les trois premiers types de contributions qui relèvent du Design System (évolution d’un Core, nouveau Métier, nouveau Core), des **templates dédiés** sont disponibles dans Jira.
 
-                    🔗 <strong><u>Template A → Évolution d’un composant Core</u></strong>
+                    🔗 <strong><a href="https://gopro-tickets.rte-france.com/browse/DSR-454" target="_blank" class="docs-link">Template A → Évolution d’un composant Core</a></strong>
 
-                    🔗 <strong><u>Template B → Nouveau composant Métier</u></strong>
+                    🔗 <strong><a href="https://gopro-tickets.rte-france.com/browse/DSR-455" target="_blank" class="docs-link">Template B → Nouveau composant Métier</a></strong>
 
-                    🔗 <strong><u>Template C → Nouveau composant Core</u></strong>
+                    🔗 <strong><a href="https://gopro-tickets.rte-france.com/browse/DSR-456" target="_blank" class="docs-link">Template C → Nouveau composant Core</a></strong>
 
                     <div>
                         Ils contiennent les informations nécessaires à une qualification rapide :
@@ -76,7 +76,7 @@ import DecisionTree from "./assets/DecisionTree.svg";
                 <DocsSection title="Cas particulier : composant jetable / local">
                     Ce type de besoin ne crée pas un composant du Design System. Cependant, pour accompagner les équipes et éviter les dérives, un template “Composant Local – Assistance design” est disponible.
 
-                    🔗 <strong><u>Template → Composant Local – Assistance design</u></strong>
+                    🔗 <strong><a href="https://gopro-tickets.rte-france.com/browse/DSR-457" target="_blank" class="docs-link">Template → Composant Local – Assistance design</a></strong>
 
                     <div>
                         Il permet :
