--- a/packages/design-docs/stories/DesignSystem/GetStartedContribution/Icons/Icons.mdx
+++ b/packages/design-docs/stories/DesignSystem/GetStartedContribution/Icons/Icons.mdx
@@ -19,7 +19,7 @@ import Body from "../../../../src/components/Body/Body";
         <Accordion title="Contribuer à la librairie d’icônes">
             <DocsSection title="Les questions à se poser avant de contribuer" headingLevel={3}>
                 <ol>
-                    <li>Est-ce que l’icône que je veux ajouter n’existe pas déjà dans la librairie ?</li><br/>
+                    <li>Est-ce que l’icône que je veux ajouter n’existe pas déjà dans la <a href="https://www.figma.com/design/tKntdNwiF1x3jSpJ9Q0O0q/01.3-Iconography?node-id=0-1&fuid=1478782722248225119" target="_blank" class="docs-link">librairie</a> ?</li><br/>
                     <li>Est-ce qu’une icône existante dans la librairie ne remplit pas déjà la même fonction ?</li><br/>
                     <li>Est-ce que l’icône que je veux ajouter n’a pas déjà été proposée ?</li><br/>
                     <li>Est-ce que l’icône que je veux ajouter n’est pas déjà en cours d’analyse ou d’implémentation ?</li><br/>
@@ -29,7 +29,7 @@ import Body from "../../../../src/components/Body/Body";
 
             <DocsSection title="Comment contribuer ?" headingLevel={3}>
                 <ol>
-                    <li><strong> Se rendre sur la page Figma : <u>🚧 Propositions/Validations en cours.</u></strong></li>
+                    <li><strong> Se rendre sur la page Figma : <a href="https://www.figma.com/design/tKntdNwiF1x3jSpJ9Q0O0q/01.3-Iconography?node-id=1-2&fuid=1478782722248225119" target="_blank" class="docs-link">🚧 Propositions/Validations en cours.</a></strong></li>
                     <br/>
                     <li>
                         <strong>Vérifier que l’icône qui vous manque n’a pas déjà été proposée. Si c’est le cas, ajouter un ❤️ à côté de cette icône.</strong><br/>
@@ -39,7 +39,7 @@ import Body from "../../../../src/components/Body/Body";
                     </li>
                     <br/>
                     <li>
-                        <strong>Suivre les guidelines pour paramétrer l’icône que vous souhaitez ajouter.</strong>
+                        <strong>Suivre les guidelines pour paramétrer l’icône que vous souhaitez ajouter.</strong><br/>
                         <em>Nous accordons une importance forte à la cohérence de la librairie. Votre proposition doit donc s’y intégrer harmonieusement.</em>
                     </li>
                     <br/>
