feat(docs): Add page valeurs

--- a/packages/design-docs/stories/DesignSystem/Home/Home.mdx
+++ b/packages/design-docs/stories/DesignSystem/Home/Home.mdx
@@ -4,7 +4,7 @@ import Header from "./components/Header";
 import MainContent from "./components/MainContent";
 import Footer from "./components/Footer";
 
-<Meta title="Design system/Acceuil" />
+<Meta title="Design system/Accueil" />
 
 <Header />
 <MainContent />
