fix (docs): add missing libraries image for Design startup docs

--- a/packages/design-docs/stories/DesignSystem/GetStartedStartupKit/Design/Design.mdx
+++ b/packages/design-docs/stories/DesignSystem/GetStartedStartupKit/Design/Design.mdx
@@ -10,6 +10,8 @@ import "../../../../src/styles/Police.css"
 import Paragraph from "../../../../src/components/Paragraph/Paragraph";
 import Body from "../../../../src/components/Body/Body";
 
+import Libraries from "./assets/Libraries.svg";
+
 <Meta title='Design system/Get Started - Kit de démarrage/Design'/>
 
 <div className="docs">
@@ -19,8 +21,8 @@ import Body from "../../../../src/components/Body/Body";
     </HeaderComponent>
     
     <Body>
-        <Accordion title="Fichiers Figma">
-            <DocsSection>
+        <Accordion title="Fichiers Figma"> 
+            <DocsSection image={Libraries}>
                 <div>
                     Pour commencer, vous aurez besoin de plusieurs ressources clés :
                     <ul>
